# ir-rpy-stat

./: CMakeLists.txt  LICENSE  README.md  build-and-coverage.sh  build-and-run.sh  build-and-test.sh  build.sh  man.md
src/: cxxopts.hpp  main.cpp  metadata-out.cpp  metadata-out.h  options-parser.cpp  options-parser.h  rpy-metadata.cpp  rpy-metadata.h
tests/: metadata-out.output-format-metadata.t.cpp  options-parser.find-files-to-process.t.cpp  options-parser.load-options.t.cpp
tests/input-files/: symlnk.rpy
